fix: ScrollArea 수정 - style 변경 및 wrap 수정

--- a/ScrollArea/ScrollArea.module.scss
+++ b/ScrollArea/ScrollArea.module.scss
@@ -1,5 +1,6 @@
 .Wrap {
     position: relative;
+    overflow: hidden;
 }
 
 .Scroller {
